--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>home page </title>
+    <link rel="stylesheet" href="{% static 'style.css' %}" />
 </head>
 <body>
- <h1> welcome to the home page Mr. Django!!!!!!!!!!</h1>
+
+ {% block content %}
+ {% endblock %}
 </body>
 </html>
