--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="{% static 'style.css' %}" />
 </head>
 <body>
-
+   
+        <header>
+          <div class="logo">
+            LOGO
+          </div>
+          <nav>
+            <li><a href="" class="active navLink">Film 1</a></li>
+            <li><a href="" class="navLink">Film 2</a></li>
+            <li><a href="" class="navLink">Film 3</a></li>
+          </nav>
+        </header>
+  
  {% block content %}
  {% endblock %}
 </body>
