--- a/static/style.css
+++ b/static/style.css
@@ -1,9 +1,15 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 
 header {
     width: 100%;
     
     margin-inline: auto;
-    height: 50px;
+    height: 60px;
     z-index: 30;
     display: flex;
  
@@ -17,13 +23,7 @@ header {
     
   }
   
-  header.scrolled {
-    background-color: #00000052;
-    backdrop-filter: blur(50px);
-    box-shadow: 0px 0px 15px #000000b6;
-    top: 15px;
-    border-radius: 20px;
-  }
+
   
   header .logo {
     color: #fff;
@@ -49,36 +49,36 @@ header {
     transition: all 0.3s ease 0s;
   }
   
-  header nav li a.active {
-    background: #b61dfd6f;
-    border: 1px solid #ffffff35;
-    backdrop-filter: blur(55px);
-    color: #ffffff;
-    border-radius: 20px;
-  }
 
-  #sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 250px;
-    height: 100%;
+
+ 
+
+  .container{
+    display:inline-grid;
+
+    width: 100%;
+    grid-template-columns: 40% 60%;
+  }
+  .sidebar{
+    display: flex;
     justify-content: center;
     align-items: center;
-    background: #ea1515;
-    z-index: 2000;
-    font-family: var(--lato);
-    transition: .3s ease;
-    overflow-x: hidden;
-    scrollbar-width: none;
   }
-  #contentmain {
-    width: calc(100%-250px);
-    padding: 36px 24px;
-    background-color: #ea1515;
-    font-family: var(--poppins);
+ 
+  .button{
+    background-color:#0f64dd;
+    
+    
+    padding: 5px 10px;
+    border: 0;
+    border-radius: 10vw;
+    cursor: pointer;
+    position: absolute;
+    transition: transform 0.3s ease;
+  }
+.datesection{
+  display: flex;
     justify-content: center;
-    align-items: center;
-  padding-right: 25px;
-    overflow-y: auto;
-  }
+   padding-top: 10px;
+   padding-bottom: 10px;
+}
