--- a/templates/data.html
+++ b/templates/data.html
@@ -16,6 +16,44 @@
     <div class="sidebar">
 <div class="">  
   <h1>User information</h1>
+  <div class="userdata">
+    <form>
+      <h2>Send us a Message</h2>
+      <label forname="fname">Name</label><br>
+      
+      <label forname="Email">E-mail</label><br>
+     
+      <label forname="sub">Subject</label><br>
+      
+      <label forname="msg">Message</label><br>
+     
+  
+  </form>
+  <div class="box">
+      
+      <div class="divide">
+          <table>
+              <tr>
+                  <td><i class="fa-solid fa-location-dot"></i></td>
+                  <td><span>Address:</span> 198 West 21th Street, Suite 721<br> New York NY 10016</td>
+              </tr>
+              <tr>
+                  <td><i class="fa-solid fa-phone"></i></td>
+                  <td><span>Phone:</span> + 1235 2355 98</td>
+              </tr>
+              <tr>
+                  <td><i class="fa-solid fa-paper-plane"></i></td>
+                  <td> <span>Email:</span>  info@yoursite.com</td>
+              </tr>
+              <tr>
+                  <td><i class="fa-solid fa-earth-asia"></i></td>
+                  <td><span>Website:</span>  yoursite.com</td>
+              </tr>
+          </table>
+      </div>
+  </div>
+  <button>Send Message</button>
+  </div>
 </div>
 </div>
     
@@ -35,12 +73,15 @@
             <table width="100%">
               <thead>
                 <tr>
-                  <th>#</th>
-                  <th><span class="las la-sort"></span> CLIENT</th>
-                  <th><span class="las la-sort"></span> TOTAL</th>
-                  <th><span class="las la-sort"></span> ISSUED DATE</th>
-                  <th><span class="las la-sort"></span> BALANCE</th>
-                  <th><span class="las la-sort"></span> ACTIONS</th>
+                  <th>BIN</th>
+                  <th><span class="las la-sort"></span> Last 4</th>
+                  <th><span class="las la-sort"></span> Ammount</th>
+                  <th><span class="las la-sort"></span> Payout</th>
+                  <th><span class="las la-sort"></span> Code</th>
+                  <th><span class="las la-sort"></span> Accepted</th>
+                  <th><span class="las la-sort"></span>Internal Transaction ID</th>
+                  <th><span class="las la-sort"></span>Created at</th>
+                  <th><span class="las la-sort"></span>Actions</th>
                 </tr>
               </thead>
               <tbody>
