--- a/static/style.css
+++ b/static/style.css
@@ -49,8 +49,53 @@ header {
     transition: all 0.3s ease 0s;
   }
   
-
-
+  dialog {
+    /* Styles for dialogs that carry both modal and non-modal behaviors */
+  }
+  
+  dialog:modal {
+    /* Styles for dialogs that carry modal behavior */
+  }
+  
+  dialog:not(:modal) {
+    /* Styles for dialogs that carry non-modal behavior */
+  }
+  
+  button {
+    cursor: pointer;
+    font: inherit;
+    line-height: 1;
+    padding: 0.5rem;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  input[type="password"] {
+    font: inherit;
+    line-height: 1;
+    padding: 0.5rem;
+  }
+  
+  .modal {
+    border: 0;
+    border-radius: 0.5rem;
+    box-shadow: 0 0 0.5rem 0.25rem hsl(0 0% 0% / 10%);
+    max-width: 50rem;
+    padding: 2rem;
+    position: relative;
+  }
+  
+  .modal::backdrop {
+    background: hsl(0 0% 0% / 50%);
+  }
+  
+  .modal-close-btn {
+    font-size: 0.75em;
+    position: absolute;
+    right: 0.25em;
+    top: 0.25em;
+  }
+  
  
 
   .container{
