credit card and trabsaction added

--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -1,6 +1,6 @@
 
 
-{% extends 'partials/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 {% block content %}
       <!-- Login Reg start -->
